minor bug image not centered

--- a/root-khet/webapp/src/main/webapp/resources/css/product.css
+++ b/root-khet/webapp/src/main/webapp/resources/css/product.css
@@ -50,7 +50,7 @@
 
 .image-item {
 	max-width: 500px;
-	max-height: 300px;
+	height: 300px;
 	margin: auto auto;
 }
 
